# t-qt-pro-s3-esp-idf-vscode-project

./: .clang-format  .gitignore  .words.txt  CMakeLists.txt  LICENSE.txt  README.md  code.code-workspace  sdkconfig  sdkconfig.defaults  version
.backup/sdkconfig/: sdkconfig  sdkconfig.defaults  sdkconfig.old
.demo/gc9107_demo/main/: CMakeLists.txt  app_main.cpp  image_logo.h
.demo/hello_world/: CMakeLists.txt
.demo/hello_world/main/: CMakeLists.txt  app_main.cpp
.demo/t-qt-pro-cli+buttons/main/: app_main.cpp  rtos.cpp
.demo/t-qt-pro-cli/main/: CMakeLists.txt  app_main.cpp
.docs/: screen.txt
.examples/example_demo/: CMakeLists.txt  app_main.cpp
.examples/hello-world/main/: CMakeLists.txt  app_main.cpp
.examples/lvgl9_demo/main/: CMakeLists.txt  app_main.cpp  ui.h
.examples/lvgl9_demo_Expert/main/: app_main.cpp  heaptrace.h  s  stack_monitor.h  task_monitor.h  ui.h
.examples/lvgl9_demo_Expert/main-USE_FREERTOS_TASK_NOTIF/: CMakeLists.txt  app_main.cpp  changes  lv_conf.h  product_pins.h  task_monitor.c
.examples/lvgl9_demo_Expert/main-old/: app_main.cpp  s
.examples/lvglv8_demo_nonfinalised/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
.examples/lvglv8_demo_nonfinalised/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  display_hmi.c  lv_conf.h  lv_ui.cpp  lv_ui.h  power_driver.cpp  product_pins.h  touch_driver.cpp
.examples/my_console/: partition.csv  sdkconfig
.examples/my_console/components/cmd_system/: CMakeLists.txt  cmd_system_common.c
.examples/my_console/main/: CMakeLists.txt  app_main.cpp  console_settings.c
.examples/thmi_lvgl9_console_espidf_demo/: sdkconfig  sdkconfig.defaults
.examples/thmi_lvgl9_console_espidf_demo/bootloader_components/my_boot_hooks/: hooks.c
.examples/thmi_lvgl9_console_espidf_demo/main/: CMakeLists.txt  app_main.cpp  lv_conf.h  product_pins.h  ui.h
.examples/touch-screen/main/: app_main.cpp  lv_conf.h
.examples/wifi_scan/: CMakeLists.txt  app_main.cpp
.extras/: Ieșire salvată Terminal.txt  journal.txt  project-log  vscode-extensions.txt
.extras/GFX_Lib/include/: gfx_gc9107.h  gfx_spi.h
.extras/GFX_Lib/src/: gfx_gc9107.c  gfx_spi.c
.help/: Mac_HELP.md
.help/git/: Git_HELP.md  Git_simple_HELP.md
.help/vscode/: activeaza-comanda-code.txt  exporta-extensiile din-VSCode.txt  importa-extensiile-in-VSCode.txt
.partitions/: partition1.csv  partition2.csv
.tools/mac/: .zprofile  dump_PATH_to_txt.sh
components/esp_lcd_gc9107/: idf_component.yml
components/lvgl/: Kconfig
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/stdlib/custom_mem/: lv_custom_mem.c  lv_custom_mem.h
lib/Lilygo-T-QT-Pro-CLI/: CMakeLists.txt  README.md  version
lib/Lilygo-T-QT-Pro-CLI/include/: command_line_interface.h  config.h  init.h
lib/Lilygo-T-QT-Pro-CLI/modules/hello/: hello.c  hello.h
lib/Lilygo-T-QT-Pro-CLI/modules/info/: funct.c  funct.h  info.c  info.h  stack.c  stack.h
lib/Lilygo-T-QT-Pro-CLI/modules/nvs_cmd/: nvs_cmd.c  nvs_cmd.h
lib/Lilygo-T-QT-Pro-CLI/modules/restart/: restart.c  restart.h
lib/Lilygo-T-QT-Pro-CLI/modules/set_cmd/: set_cmd.c  set_cmd.h  set_log.c  set_log.h
lib/Lilygo-T-QT-Pro-CLI/modules/tasks_nfo/: TODO  tasks_nfo.c  tasks_nfo.h
lib/Lilygo-T-QT-Pro-CLI/modules/uptime/: uptime.c  uptime.h
lib/Lilygo-T-QT-Pro-CLI/modules/wifi_cmd/: wifi_cmd.h  wifi_join_cmd.c
lib/Lilygo-T-QT-Pro-CLI/src/: command_line_interface.c  config.c  init.c
lib/OneButton/: CMakeLists.txt  version
lib/OneButton/include/: button.h
lib/OneButton/src/: button.cpp
main/: CMakeLists.txt  app_main.cpp  dev_pins.h  lv_conf.h
